--- a/ui-style.css
+++ b/ui-style.css
@@ -132,9 +132,12 @@
 
 .OLSKToolbar {
 	--OLSKToolbarButtonSize: 20px;
-	--OLSKToolbarMobileMinHeight: 52px;
-	
-	padding: 0 4px;
+	--OLSKToolbarPadding: 4px;
+	--OLSKToolbarMinHeight: 32px;
+	--OLSKToolbarElementSpacing: 2px;
+
+	min-height: var(--OLSKToolbarMinHeight);
+	padding: var(--OLSKToolbarPadding);
 
 	background: var(--OLSKCommonBackground);
 
@@ -150,8 +153,7 @@
 
 .OLSKToolbar {
 	--OLSKToolbarButtonSize: 24px;
-
-	min-height: var(--OLSKToolbarMobileMinHeight);
+	--OLSKToolbarMinHeight: 44px;
 }
 
 }
@@ -178,17 +180,17 @@
 /* OLSKToolbarElementGroup */
 
 .OLSKToolbarElementGroup {
-	margin: 10px 2px;
+	margin: 0 var(--OLSKToolbarElementSpacing);
 }
 
 .OLSKToolbarElementGroup button {
-	margin: 0 2px;
+	margin: 0 var(--OLSKToolbarElementSpacing);
 }
 
 @media screen and (max-width: 760px) {
 
 .OLSKToolbarElementGroup button {
-	margin: 0 8px;
+	--OLSKToolbarElementSpacing: 8px;
 }
 
 }
