--- a/ui-style.css
+++ b/ui-style.css
@@ -48,6 +48,13 @@
 	border-bottom: var(--OLSKCommonEdgeBorder) !important;
 }
 
+/* OLSKStickyHeader */
+
+.OLSKStickyHeader {
+	position: sticky;
+	top: 0;
+}
+
 /* OLSKViewport */
 
 @media screen and (min-width: 760px) {
