Lighten input border

--- a/ui-style.css
+++ b/ui-style.css
@@ -440,6 +440,10 @@
 	appearance: none;
 }
 
+.OLSKDecor input, .OLSKDecor textarea {	
+	border: var(--OLSKCommonEdgeBorder);
+}
+
 .OLSKDecor button, .OLSKDecorPress, .OLSKDecor input[type="submit"] {
 	background: var(--OLSKCommonInteractiveFill);
 }
@@ -652,7 +656,6 @@ a.OLSKDecorPress {
 .OLSKDecorBigForm input[type=text], .OLSKDecorBigForm textarea {
 	width: 90%;
 	padding: calc(var(--OLSKSharedPadding) * 2);
-	border: var(--OLSKCommonEdgeBorder);
 }
 
 /*.OLSKCommonForm input[type=text] {
