--- a/ui-style.css
+++ b/ui-style.css
@@ -695,3 +695,13 @@ a.OLSKDecorPress {
     border: 5px var(--OLSKCommonInteractiveFill) solid;
     border-radius: var(--OLSKBorderRadius);
 }
+
+/* OLSKDecorSilentLink */
+
+.OLSKDecorSilentLink:after {
+ content: unset !important;
+}
+
+.OLSKDecorSilentLink img {
+ border: none !important;
+}
