--- a/ui-style.css
+++ b/ui-style.css
@@ -710,3 +710,22 @@ a.OLSKDecorPress {
 .OLSKDecorSilentLink img {
  border: none !important;
 }
+
+/* OLSKDecorCallout */
+
+.OLSKDecorCallout {
+	padding: 30px;
+
+	margin: 50px 0;
+
+	background: hsl(0, 0%, 96%);
+	color: hsl(0, 0%, 20%);
+}
+
+.OLSKDecorCallout :first-child {
+	margin-top: 0;
+}
+
+.OLSKDecorCallout :last-child {
+	margin-bottom: 0;
+}
