--- a/ui-style.css
+++ b/ui-style.css
@@ -324,13 +324,13 @@
 	flex-grow: 1;
 }
 
-.OLSKMasterListBody .OLSKCollectionItemLocus .OLSKCollectionItem {
+.OLSKMasterListBody .OLSKCollectionItemLocus {
 	background: var(--OLSKCollectionItemsLocusColorDefault);
 }
 
 @media screen and (min-width: 760px) {
 
-.OLSKMasterListFocused .OLSKCollectionItemLocus .OLSKCollectionItem {
+.OLSKMasterListFocused .OLSKCollectionItemLocus {
 	background: var(--OLSKCollectionItemsLocusColorActive);
 	color: var(--OLSKCollectionItemsLocusColorActiveInverse);
 }
