Style stash checkbox

--- a/ui-style.css
+++ b/ui-style.css
@@ -764,7 +764,7 @@ a.OLSKDecorPress {
 /* OLSKCollectionItemStash */
 
 .OLSKCollectionItemStash .OLSKCollectionItemStashStatus {
-	background: var(--OLSKInputBackground);
+	background: var(--OLSKCommonForeground);
 }
 
 .OLSKCollectionItemStashStatus {
@@ -782,4 +782,8 @@ a.OLSKDecorPress {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+
+.OLSKCollectionItemStashStatusImage * {
+	stroke: var(--OLSKCommonBackground);
 }
