--- a/ui-style.css
+++ b/ui-style.css
@@ -361,12 +361,8 @@
 	margin: auto;
 }
 
-@media screen and (min-width: 760px) {
-
-	.OLSKDecorCapped {
-		padding-top: 0;
-	}
-
+.OLSKDecorNoTopPad {
+	padding-top: 0;
 }
 
 .OLSKDecorOutline {
